--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,7 @@ ci-approval-bot = "scripts:github_approval_bot"
 [tool.poetry.dependencies]
 python = "^3.12"
 termcolor = "^2.4.0"
+wagtail = "^6.1.2"
 pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
