--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,6 +145,7 @@ django-manage = "scripts:django_manage"
 django-makemigrations = "scripts:django_makemigrations"
 django-migrate = "scripts:django_migrate"
 django-createsuperuser = "scripts:django_createsuperuser"
+collectstatic = "scripts:django_collectstatic"
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -157,6 +158,7 @@ python-dotenv = "^1.0.1"
 environs = "^11.0.0"
 frozenlist = "^1.4.1"
 frozendict = "^2.4.4"
+faker = "^25.8.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
@@ -169,6 +171,10 @@ import-linter = "^2.0"
 types-pyyaml = "^6.0.12.20240311"
 commit-linter = "^1.0.3"
 django-stubs = "^5.0.2"
+factory-boy = "^3.3.0"
+wagtail-factories = "^4.2.1"
+pytest-env = "^1.1.3"
+pytest-django = "^4.8.0"
 
 [build-system]
 requires = ["poetry-core"]
