--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 env =
-    DJANGO_SETTINGS_MODULE=tests.settings
+    DJANGO_SETTINGS_MODULE = tests.settings
 
 testpaths = tests
 python_files = test_*.py
