--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,6 +159,8 @@ environs = "^11.0.0"
 frozenlist = "^1.4.1"
 frozendict = "^2.4.4"
 faker = "^26.0.0"
+django-health-check = "^3.18.3"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
