feat: Add health checks

--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -7,5 +7,6 @@ python_files = test_*.py
 
 xfail_strict = true
 
+addopts = --create-db
 markers =
     need_attention: the test looks flakey and needs to be fixed
