--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -166,6 +166,7 @@ jobs:
       DATABASE_PASSWORD: postgres
       DATABASE_PORT: '5432'
       DATABASE_USER: postgres
+      DEBUG: 1
     name: 'Python test: coverage'
     runs-on: ubuntu-latest
     services:
