--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "git+https://github.com/HanaPoulpe/blog.git"
   },
   "scripts": {
+    "stylelint": "stylelint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "version": "1.0.0"
