--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,7 +174,7 @@ pytest-cov = "^5.0.0"
 import-linter = "^2.0"
 types-pyyaml = "^6.0.12.20240724"
 commit-linter = "^1.0.3"
-django-stubs = "^5.0.4"
+django-stubs = "5.0.2"
 factory-boy = "^3.3.0"
 wagtail-factories = "^4.2.1"
 pytest-env = "^1.1.3"
