--- a/pyproject.toml
+++ b/pyproject.toml
@@ -163,6 +163,7 @@ faker = "^26.1.0"
 django-health-check = "^3.18.3"
 psycopg2-binary = "^2.9.9"
 django-linear-migrations = "^2.13.0"
+attrs = "^24.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
