--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -158,6 +158,33 @@ jobs:
     - id: run-unit-tests
       name: Run unit_tests
       run: poetry run python-test-suite unit_tests
+  shell_tests:
+    container: python:3.12-slim-bookworm
+    env:
+      DATABASE_HOST: postgres
+      DATABASE_NAME: postgres
+      DATABASE_PASSWORD: postgres
+      DATABASE_PORT: '5432'
+      DATABASE_USER: postgres
+    name: 'Python test: shell_tests'
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        env:
+          POSTGRES_PASSWORD: postgres
+        image: postgres:16
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s
+          --health-retries 5
+        ports:
+        - 5432/tcp
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Build
+      uses: ./.github/actions/build
+    - id: run-shell-tests
+      name: Run shell_tests
+      run: poetry run python-test-suite shell_tests
   coverage:
     container: python:3.12-slim-bookworm
     env:
@@ -207,6 +234,7 @@ jobs:
         ${{ needs.blog_site_tests.result }}
         ${{ needs.all_apps_tests.result }}
         ${{ needs.unit_tests.result }}
+        ${{ needs.shell_tests.result }}
     if: ${{ always() }}
     name: 'Python test: OK'
     needs:
@@ -216,6 +244,7 @@ jobs:
     - blog_site_tests
     - all_apps_tests
     - unit_tests
+    - shell_tests
     runs-on: ubuntu-latest
     steps:
     - id: test-results
